MODON MRE BPDEV/force-app/main/default/objects/Modon_Documents_Master_Configuration__mdt/Modon_Documents_Master_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Modon Documents Master Configuration</label>
    <pluralLabel>Modon Documents Master Configurations</pluralLabel>
</CustomObject>