MODON MRE BPDEV/force-app/main/default/objects/Modon_Documents_Master_Configuration__mdt/fields/DocumentAPIName__c.field-meta.xml
<CustomField>
    <fullName>DocumentAPIName__c</fullName>
    <label>Document API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>