MODON MRE BPDEV/force-app/main/default/objects/Modon_Documents_Master_Configuration__mdt/fields/DocumentDisplayName__c.field-meta.xml
<CustomField>
    <fullName>DocumentDisplayName__c</fullName>
    <label>Document Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>