MODON MRE BPDEV/force-app/main/default/objects/Modon_Documents_Master_Configuration__mdt/fields/GenerateDocument__c.field-meta.xml
<CustomField>
    <fullName>GenerateDocument__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Document</label>
    <type>Checkbox</type>
</CustomField>