MODON MRE BPDEV/force-app/main/default/objects/Modon_Documents_Master_Configuration__mdt/fields/SendForESignature__c.field-meta.xml
<CustomField>
    <fullName>SendForESignature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send for E-Signature</label>
    <type>Checkbox</type>
</CustomField>