MODON MRE BPDEV/force-app/main/default/objects/Modon_Documents_Master_Configuration__mdt/listViews/Myview.listView-meta.xml
<ListView>
    <fullName>Myview</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>SendForESignature__c</columns>
    <columns>GenerateDocument__c</columns>
    <columns>IsProtected</columns>
    <columns>ObjectAPIName__c</columns>
    <columns>DocumentDisplayName__c</columns>
    <columns>DocumentAPIName__c</columns>
    <columns>DocumentDescription__c</columns>
    <columns>Source_Entity__c</columns>
    <filterScope>Everything</filterScope>
    <label>Myview</label>
</ListView>